Fix broken layout on mobile with long url

--- a/_sass/_zigexn.scss
+++ b/_sass/_zigexn.scss
@@ -104,3 +104,7 @@
   }
 }
 
+
+.article-post a {
+  word-break: break-all;
+}
